--- a/spring-boot/src/main/resources/templates/user/login.html
+++ b/spring-boot/src/main/resources/templates/user/login.html
@@ -5,7 +5,10 @@
     <title>Login</title>
 </head>
 <body>
-<form action="/api/v1/login" method="post">
+<form th:action="@{/api/v1/login}" method="post">
+<!--    <input type="hidden"
+           th:name="${_csrf.getParameterName()}"
+           th:value="${_csrf.getToken()}">-->
     <div style="color: red" th:if="${param.error}">
         Bad credentials.
     </div>
